# analyzer_600

./: .gitignore  build-release.sh  dev.ps1  dev.sh  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: process.rs
src-tauri/src/parser/: evento.rs  mod.rs  nfe.rs
src/components/: AppLayout.tsx  AppSidebar.tsx  IeDetailSheet.tsx  MesAccordion.tsx  MetaProgress.tsx  NFeTable.tsx  StatCard.tsx
src/components/sidebar/: EmpresaItem.tsx  LoteItem.tsx
src/contexts/: AppDataContext.tsx
src/lib/: db.ts  excelExport.ts  notify.ts  pdfExport.ts  rules.ts  storage.ts  types.ts
src/pages/: Dashboard.tsx  Import.tsx  NotFound.tsx  Settings.tsx  Tabelao.tsx
